--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,3 +1,8 @@
 #pointer{
     cursor: pointer;
   }
+
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgba(245, 245, 245, 0.548)!Important;
+    opacity: 1; /* Firefox */
+  }
