--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@
 
 }
 
+h1 {
+    color: whitesmoke;
+    background-color: rgba(0, 0, 0, 0.9);
+    margin: auto;
+    padding: 1rem 0;
+    font-size: 3rem;
+    border-radius: 100%;
+    max-width: 20%;
+    
+}
+
 
 
 
