--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,71 @@ h1 {
 }
 
 
+/* Styling for Loading element */
+.center {
+  background-color: black;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.ring {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  animation: ring 2s linear infinite;
+  background-color: black;
+}
+
+@keyframes ring {
+  0%{
+    transform: rotate(0deg);
+    box-shadow: 1px 5px 2px #e65c00
+  }
+
+  50%{
+    transform: rotate(180deg);
+    box-shadow: 1px 5px 2px #18b201
+  }
+
+  100%{
+    transform: rotate(360deg);
+    box-shadow: 1px 5px 2px #0456c8
+  }
+}
+
+.ring::before{
+  position: absolute;
+  content: '';
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+}  
+
+span{ 
+  color: #737373;
+  z-index: 1;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  line-height: 200px;
+  animation: text 3s ease-in-out infinite;
+}
+
+@keyframes text {
+  50%{
+    color: black;
+  }
+}
+
+
+
+
 
 
